Loads of styling related changes, updated banner images, etc

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -77,8 +77,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -92,23 +92,23 @@
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Image Galleries</h1>
-                <img src="../img/image-gallery-0.png" alt="">
+                <img src="../img/img_gallery_banner.jpg" alt="">
             </div>
         </div>
 
         <!-- Featured Image -->
-        <div class="row px-2 py-3 mb-5">
-            <div class="col-lg-8">
+        <div class="row px-2 mt-3 mb-5">
+            <div class="col-lg-9">
                 <h1 class="mb-4">Image of The Day</h1>
                 <a href="https://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn">
-                    <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/51982058640_3306aa1585_o.jpeg" alt="" class="img-fluid">
+                    <img src="/img/IOTD.jpg" alt="" class="img-fluid">
                 </a>
             </div>
-            <div class="col-lg-4 pb-5">
+            <div class="col-lg-3 pb-5">
                 <div style="position: relative; top: 35%;">
-                    <h2>Space Launch System Rocket at Dawn</h2>
-                    <p class="my-3">NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
-                    <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn'" type="button">View Image Feature</button>
+                    <h2>Cold as (Dry) Ice</h2>
+                    <p class="my-3">Every winter, a layer of carbon dioxide frost (dry ice) forms on the surface of Mars.</p>
+                    <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/cold-as-dry-ice'" type="button">View Image Feature</button>
                 </div>
             </div>
         </div>
@@ -116,13 +116,13 @@
 
      <!-- Featured Jumbotron -->
      <div class="row mb-5">
-        <div class="jumbotron w-100">
-            <div class="jumbotron-container">
+        <div class="jumbotron">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-4 ">
                         <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
                             <div class="uni-header">
-                                <h2 class="card-title">NASA News</h2>
+                                <h2>NASA News</h2>
                             </div>
                             <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
                         </a>
@@ -134,7 +134,7 @@
                     <div class="col-lg-4">
                         <a href="http://images.nasa.gov/" class="card">
                             <div class="uni-header">
-                                <h2 class="card-title mb-0">NASA Image Library</h2>
+                                <h2>NASA Image Library</h2>
                             </div>
                             <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
                         </a>
@@ -146,7 +146,7 @@
                     <div class="col-lg-4">
                         <a href="https://www.nasa.gov/missions" class="card">
                             <div class="uni-header">
-                                <h2 class="card-title">Mission Galleries</h2>
+                                <h2>Mission Galleries</h2>
                             </div>
                             <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
                         </a>
@@ -162,55 +162,56 @@
     </div>
 
     <div class="container pb-5">
+        <h1>Galleries</h1>
         <!-- Image Feed -->
-        <div class="card-deck py-5"> 
+        <div class="row my-5"> 
             <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/a-homecoming-for-mark-vande-hei" class="card">
+                <a href="https://apod.nasa.gov/apod/astropix.html" class="card">
                     <div class="captioned-img">
-                        <img src="../img/gallery-5.jpg" alt="" class="img-fluid">
-                        <p class="img-caption"><span>A Homecoming for Mark Vande Hei</span></p>
+                        <img src="../img/astronomy_POTD.jpg" alt="" class="img-fluid">
+                        <p class="img-caption py-2"><span>Astronomy Pic of the Day</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/smash-up-how-to-create-rocky-planets" class="card">
+                <a href="https://www.flickr.com/photos/nasacommons/" class="card">
                     <div class="captioned-img">
-                        <img src="../img/gallery-6.jpg" alt="" class="img-fluid">
-                        <p class="img-caption"><span>Smash-Up: How To Create Rocky Planets</span></p>
+                        <img src="../img/historic_images.jpg" alt="" class="img-fluid">
+                        <p class="img-caption py-2"><span>Historic Images</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/pioneering-female-aviator-wally-funk-wins-2022-michael-collins-trophy-for-lifetime" class="card">
+                <a href="https://earthobservatory.nasa.gov/images" class="card">
                     <div class="captioned-img">
-                        <img src="../img/gallery-7.jpg" alt="" class="img-fluid">
-                        <p class="img-caption"><span>Pioneering Female Aviator Wally Funk Wins 2022 Michael Collins Trophy for Lifetime Achievement</span></p>
+                        <img src="../img/earth_obv_images.jpg" alt="" class="img-fluid">
+                        <p class="img-caption py-2"><span>Earth Observatory Images</span></p>
                     </div>
                 </a>
             </div>
         </div>
-        <div class="row py-5">
+        <div class="row my-5">
             <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/whats-new-on-the-moon-after-50-years" class="card">
+                <a href="https://www.nasa.gov/centers/armstrong/images/index.html" class="card">
                     <div class="captioned-img">
-                        <img src="../img/gallery-8.jpg" alt="" class="img-fluid">
-                        <p class="img-caption"><span>What's New on the Moon ... After 50 Years</span></p>
+                        <img src="../img/armstrong_aircraft_images.jpg" alt="" class="img-fluid">
+                        <p class="img-caption py-2"><span>Armstrong Aircraft Images</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/contraband-corned-beef-and-the-gemini-iii-mission" class="card">
+                <a href="https://www.jpl.nasa.gov/spaceimages/" class="card">
                     <div class="captioned-img">
-                        <img src="../img/gallery-9.jpg" alt="" class="img-fluid">
-                        <p class="img-caption"><span>Contraband Corned Beef and the Gemini III Mission</span></p>
+                        <img src="../img/space_images.jpg" alt="" class="img-fluid">
+                        <p class="img-caption py-2"><span>Space Images</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/5000-exoplanets-and-counting" class="card">
+                <a href="http://nasasearch.nasa.gov/search/images?affiliate=nasa&query=" class="card">
                     <div class="captioned-img">
-                        <img src="../img/gallery-10.jpg" alt="" class="img-fluid">
-                        <p class="img-caption"><span>5,000 Exoplanets and Counting</span></p>
+                        <img src="../img/search_images.jpg" alt="" class="img-fluid">
+                        <p class="img-caption py-2"><span>Search Images</span></p>
                     </div>
                 </a>
             </div>
