--- a/Media/videos.html
+++ b/Media/videos.html
@@ -78,8 +78,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -93,17 +93,17 @@
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Videos</h1>
-                <img src="../img/videos-0.png" alt="">
+                <img src="../img/videos_banner.jpg" alt="">
             </div>
         </div>
 
         <!-- Video Feed -->
         <div class="card-deck"> 
-            <div class="col-lg-3">
+            <div class="col-lg-3 mb-4">
                 <a href="https://youtu.be/mtsWDWCCSG0" class="card">
                     <img src="../img/video-0.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Artemis I Rollout Trailer</h5>
+                        <h3>Artemis I Rollout Trailer</h3>
                     </div>
                 </a>
             </div>
@@ -111,7 +111,7 @@
                 <a href="https://youtu.be/51WbSe5Qww4" class="card">
                     <img src="../img/video-1.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">People of Artemis</h5>
+                        <h3>People of Artemis</h3>
                     </div>
                 </a>
             </div>
@@ -119,7 +119,7 @@
                 <a href="https://youtu.be/_yUXG-Fk-X0" class="card">
                     <img src="../img/video-2.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">NASA's Exoplanet Superheroes</h5>
+                        <h3>NASA's Exoplanet Superheroes</h3>
                     </div>
                 </a>
             </div>
@@ -127,15 +127,15 @@
                 <a href="https://youtu.be/q0giRXI3FvA" class="card">
                     <img src="../img/video-3.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Watch NOAA's GOES-T Weather Satellite Launch to Geostationary Orbit</h5>
+                        <h3>Watch NOAA's GOES-T Weather Satellite Launch to...</h3>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 mb-4">
                 <a href="https://youtu.be/7Ns64uz0-AQ" class="card">
                     <img src="../img/video-4.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Pioneers to New Frontiers: NASA Women Through the Decades</h5>
+                        <h3>Pioneers to New Frontiers: NASA Women Through the Decades</h3>
                     </div>
                 </a>
             </div>
@@ -143,7 +143,7 @@
                 <a href="https://youtu.be/EslP8R8hK88" class="card">
                     <img src="../img/video-5.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">An Update on Our Artemis I Mission on This Week @NASA – February 25, 2022</h5>
+                        <h3>An Update on Our Artemis I Mission on This Week @NASA – February 25, 2022</h3>
                     </div>
                 </a>
             </div>
@@ -151,7 +151,7 @@
                 <a href="https://youtu.be/vCQ5jnjHjog" class="card">
                     <img src="../img/video-6.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Expedition 66 Northrop Grumman CRS-17 Cygnus Cargo Craft Launch - Feb. 19, 2022</h5>
+                        <h3>Expedition 66 Northrop Grumman CRS-17 Cygnus Cargo Craft Launch - Feb. 19, 2022</h3>
                     </div>
                 </a>
             </div>
@@ -159,7 +159,7 @@
                 <a href="https://youtu.be/EmJt3Hj2pZY" class="card">
                     <img src="../img/video-7.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Watch S.S. Piers Sellers Cygnus Capsule Launch to the Space Station – Official NASA Broadcast</h5>
+                        <h3>Watch S.S. Piers Sellers Cygnus Capsule Launch to the Space Station – Official NASA Broadcast</h3>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                 <a href="https://youtu.be/-IAcwLYYFGk" class="card">
                     <img src="../img/video-8.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Roving with Perseverance: Findings from One Year on Mars (Live Public Talk)</h5>
+                        <h3>Roving with Perseverance: Findings from One Year on Mars (Live Public Talk)</h3>
                     </div>
                 </a>
             </div>
@@ -175,7 +175,7 @@
                 <a href="https://youtu.be/4ELrOBFe_ZE" class="card">
                     <img src="../img/video-9.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Fine-Tuning the James Webb Space Telescope on This Week @NASA – February 11, 2022</h5>
+                        <h3>Fine-Tuning the James Webb Space Telescope on This Week @NASA – February 11, 2022</h3>
                     </div>
                 </a>
             </div>
@@ -183,7 +183,7 @@
                 <a href="https://youtu.be/rk0PZ1qnLXw" class="card">
                     <img src="../img/video-10.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">NASA’s New Views of Venus’ Surface From Space</h5>
+                        <h3>NASA’s New Views of Venus’ Surface From Space</h3>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                 <a href="https://youtu.be/ttqTPtC0UGM" class="card">
                     <img src="../img/video-11.jpg" alt="" class="img-video">
                     <div class="card-body">
-                        <h5 class="card-title">Science Launching on Northrop Grumman CRS-17 Mission to the Space Station</h5>
+                        <h3>Science Launching on Northrop Grumman CRS-17 Mission to the Space Station</h3>
                     </div>
                 </a>
             </div>
