--- a/Missions/artemis.html
+++ b/Missions/artemis.html
@@ -77,8 +77,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -92,7 +92,7 @@
         <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Artemis I</h1>
-                <img src="../img/artemis-0.png" alt="">
+                <img src="../img/artemis_I_banner.jpg" alt="">
             </div>
         </div>
 
@@ -100,10 +100,10 @@
         <div class="row px-2 py-5">
             <div class="col lead">
                 <p>Artemis I, formerly Exploration Mission-1,will be the first integrated flight test of NASA’s Deep Space Exploration Systems: the Orion spacecraft, Space Launch System (SLS) rocket, with the newly upgraded Exploration Ground Systems at Kennedy Space Center in Cape Canaveral, Florida. </p>
-                <button class="btn btn-primary btn-rounded my-3 mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-video-gallery'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-media-resources'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded my-2 mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-video-gallery'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-media-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <!-- Featured Jumbotron -->
     <div class="row">
         <div class="jumbotron w-100">
-            <div class="jumbotron-container">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">Artemis-I Updates</h1>
@@ -159,7 +159,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h1 class="mb-4">Related Stories</h1>
+                <h1>Related Stories</h1>
             </div>
             <div class="card-deck" id="related-feed"></div>
         </div>
