--- a/Missions/commercial-crew.html
+++ b/Missions/commercial-crew.html
@@ -77,8 +77,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -91,7 +91,7 @@
         <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Commercial Crew Program</h1>
-                <img src="../img/commercial-0.png" alt="">
+                <img src="../img/commercial_crew_banner.jpg" alt="">
             </div>
         </div>
 
@@ -99,10 +99,10 @@
         <div class="row px-2 py-5">
             <div class="col lead">
                 <p>NASA’s Commercial Crew Program is delivering on its goal of safe, reliable, and cost-effective human transportation to and from the International Space Station from the United States through a partnership with American private industry.  </p>
-                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-program-overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/exploration/commercial/crew/gallery/Gallery-index.html'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3"onclick="location.href='https\://www.nasa.gov/content/commercial-crew-resources'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mr-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-program-overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/exploration/commercial/crew/gallery/Gallery-index.html'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3"onclick="location.href='https\://www.nasa.gov/content/commercial-crew-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -111,7 +111,7 @@
     <!-- Featured Jumbotron -->
     <div class="row">
         <div class="jumbotron w-100">
-            <div class="jumbotron-container">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">Commercial Crew Updates</h1>
@@ -159,7 +159,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h1 class="mb-4">Related Stories</h1>
+                <h1>Related Stories</h1>
             </div>
             <div class="card-deck" id="related-feed"></div>
         </div>
