--- a/Topics/earth.html
+++ b/Topics/earth.html
@@ -78,8 +78,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -92,7 +92,7 @@
          <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Explore Earth</h1>
-                <img src="../img/earth-0.png" alt="">
+                <img src="../img/earth_banner.jpg" alt="">
             </div>
         </div>
 
@@ -102,10 +102,10 @@
                 <p>NASA uses the vantage point of space to increase our understanding of our home planet, improve lives, and safeguard our future.
 
                     We monitor Earth’s vital signs from land, air and space with a fleet of satellites and ambitious airborne and ground-based observation campaigns. </p>
-                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/overview/index.html'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/images/index.html'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/videos/index.html'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/news/index.html'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mr-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/overview/index.html'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/images/index.html'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/videos/index.html'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/news/index.html'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -114,7 +114,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h1 class="mb-4">Related Stories</h1>
+                <h1>Related Stories</h1>
             </div>
             <div class="card-deck" id="related-feed"></div>
         </div>
