--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -77,8 +77,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -92,7 +92,7 @@
         <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Humans In Space</h1>
-                <img src="../img/humans-0.png" alt="">
+                <img src="../img/humans_space_banner.jpg" alt="">
             </div>
         </div>
 
@@ -101,10 +101,10 @@
             <div class="col lead">
                 <p>Every day since Nov. 2, 2000, people have been orbiting our planet inside the International Space Station, bringing together science, technology and human innovation to enable new technologies and research breakthroughs not possible on Earth. </p>
 
-                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/media-resources'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mr-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/media-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h1 class="mb-4">Related Stories</h1>
+                <h1>Related Stories</h1>
             </div>
             <div class="card-deck" id="related-feed"></div>
         </div>
