--- a/Topics/moon-to-mars.html
+++ b/Topics/moon-to-mars.html
@@ -77,8 +77,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -91,7 +91,7 @@
          <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Moon to Mars</h1>
-                <img src="../img/moon-mars-0.png" alt="">
+                <img src="../img/moon_mars_banner.jpg" alt="">
             </div>
         </div>
 
@@ -99,17 +99,17 @@
         <div class="row px-2 py-5">
             <div class="col lead">
                 <p>NASA will lead an innovative and sustainable program of exploration with commercial and international partners to send humans farther into space and bring back to Earth new knowledge and opportunities. </p>
-                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/media-resources'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mr-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/media-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
         <hr style="height:1px;border-width:0;background-color:gray;width:50%">
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h1 class="mb-4">Related Stories</h1>
+                <h1>Related Stories</h1>
             </div>
             <div class="card-deck" id="related-feed"></div>
         </div>
