--- a/index.html
+++ b/index.html
@@ -90,24 +90,24 @@
 
         <!-- Featured Articles -->
         <div class="row px-2 py-5">
-            <div class="col-lg-7">
+            <div class="col-lg-8">
                 <a href="article.html">
-                    <h5 class="article-subtitle">Hubble</h5>
+                    <h5 class="article-subtitle">Hubble <i>30 minutes ago</i></h5>
                     <h2 class="article-recent-title">Hubble Sees the Eye of a Colorful Galaxy</h2>
-                    <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
+                    <img class="img-fluid article-img-lg mb-2" src="img/home-1.png" width="100%">
                 </a>
-                <p class="article-recent-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust...<a href="article.html" class="article-more"><strong class="hover">read more</strong></a></p>
+                <p class="article-recent-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web...<a href="article.html" class="article-more">read more</a></p>
                 </div>
             
             <!-- Latest Articles -->
-            <div class="col-lg-5">
+            <div class="col-lg-4">
                 <ul class="article-list-ver" id="latest-feed"></ul>
             </div>
         </div>
         </div>
 
         <!-- Featured Jumbotron -->
-        <div class="row">
+        <div class="row mt-4">
             <a href="Missions/commercial-crew.html" class="jumbotron w-100">
                 <div class="jumbotron-container">
                     <div class="row">
