--- a/Missions/dart.html
+++ b/Missions/dart.html
@@ -78,8 +78,8 @@
                         <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -92,7 +92,7 @@
         <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">DART</h1>
-                <img src="../img/dart-0.png" alt="">
+                <img src="../img/dart_banner.jpg" alt="">
             </div>
         </div>
 
@@ -100,10 +100,10 @@
         <div class="row px-2 py-5">
             <div class="col lead">
                 <p>Double Asteroid Redirection Test (DART) is a spacecraft designed to impact an asteroid as a test of technology. DART’s target asteroid is NOT a threat to Earth. This asteroid system is a perfect testing ground to see if intentionally crashing a spacecraft into an asteroid is an effective way to change its course, should an Earth-threatening asteroid be discovered in the future. </p>
-                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/specials/pdco/index.html'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/media-contacts-and-information'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mr-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/specials/pdco/index.html'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mr-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/media-contacts-and-information'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -112,7 +112,7 @@
     <!-- Featured Jumbotron -->
     <div class="row">
         <div class="jumbotron w-100">
-            <div class="jumbotron-container">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="jumbotron-title">DART Updates</h1>
@@ -160,7 +160,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h1 class="mb-4">Related Stories</h1>
+                <h1>Related Stories</h1>
             </div>
             <div class="card-deck" id="related-feed"></div>
         </div>
