--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">About NASA</h1>
-                <img src="img/about-0.png" alt="">
+                <img src="img/about_nasa_banner.jpg" alt="">
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                 <p>At its 20 centers and facilities across the country – and the only National Laboratory in space – NASA studies Earth, including its climate, our Sun, and our solar system and beyond. We conduct research, testing, and development to advance aeronautics, including electric propulsion and supersonic flight. We develop and fund space technologies that will enable future exploration and benefit life on Earth.</p>
                 <p>NASA also leads a Moon to Mars exploration approach, which includes working with U.S. industry, international partners, and academia to develop new technology, and send science research and soon humans to explore the Moon on Artemis missions that will help prepare for human exploration of the Red Planet. In addition to those major missions, the agency shares what it learns so that its information can make life better for people worldwide. For example, companies use NASA discoveries and technologies to create new products for the public. To ensure future success for the agency and the nation, NASA also supports education efforts in STEM with an emphasis on increasing diversity in our future workforce.</p></p>
 
-                <h3 class="pt-3">NASA Leadership</h3>
+                <h2 class="pt-3 mb-3">NASA Leadership</h2>
                 <p>NASA is led by Administrator Bill Nelson, who became the agency's 14th administrator on May 3, 2021. Nelson served in the U.S. Senate for 18 years from Florida and as a payload specialist on space shuttle mission 61-C in 1986.</p>
             </div>
         </div>
@@ -118,7 +118,7 @@
                         <a href="https://www.nasa.gov/feature/nasa-looks-ahead-in-2022-artemis-x-59-lunar-exploration-and-more">
                             <div class="captioned-img">
                                  <img src="img/about-1.jpg" alt="" class="img-fluid w-100">
-                                 <p class="img-caption"><span>NASA 2022</span></p>
+                                 <p class="img-caption py-2"><span>NASA 2022</span></p>
                             </div>
                         </a>
                     </div>
@@ -126,7 +126,7 @@
                          <a href="https://www.youtube.com/watch?v=el7RFWBlFDU">
                              <div class="captioned-img">
                                  <img src="img/about-2.jpg" alt="" class="img-fluid w-100">
-                                 <p class="img-caption"><span>Video: NASA 2022</span></p>
+                                 <p class="img-caption py-2"><span>Video: NASA 2022</span></p>
                              </div>
                          </a>
                     </div>
@@ -134,7 +134,7 @@
                          <a href="https://www.nasa.gov/careers">
                              <div class="captioned-img">
                                  <img src="img/about-3.jpg" alt="" class="img-fluid w-100">
-                                 <p class="img-caption"><span>Careers @NASA</span></p>
+                                 <p class="img-caption py-2"><span>Careers @NASA</span></p>
                              </div>
                          </a>
                     </div>
@@ -142,7 +142,7 @@
                          <a href="https://www.nasa.gov/about/org_index.html">
                              <div class="captioned-img">
                                  <img src="img/about-4.jpg" alt="" class="img-fluid w-100">
-                                 <p class="img-caption"><span>Officials and Organizations</span></p>
+                                 <p class="img-caption py-2"><span>Officials and Organizations</span></p>
                              </div>
                          </a>
                     </div>
@@ -156,7 +156,7 @@
         <div class="row px-2 py-5">
             <div class="col-lg-4 my-4">
                 <div class="uni-header">
-                    <h3>NASA Centers and Facilities</h3>
+                    <h2>NASA Centers and Facilities</h2>
                 </div>
                 <div class="uni-content">
                     <img src="img/about-5.jpg" alt="" class="img-fluid ml-auto mr-auto" style="max-width: 300px">
@@ -171,7 +171,7 @@
             </div>
             <div class="col-lg-4 my-4">
                 <div class="uni-header">
-                    <h3>NASA and Small Businesses</h3>
+                    <h2>NASA and Small Businesses</h2>
                 </div>
                 <div class="uni-content">
                     <p>NASA is committed to providing all categories of small businesses an opportunity to participate in both NASA prime contracts and subcontracts. </p>
@@ -185,7 +185,7 @@
             </div>
             <div class="col-lg-4 my-4">
                 <div class="uni-header">
-                    <h3>Contact Us</h3>
+                    <h2>Contact Us</h2>
                 </div>
                 <div class="uni-content">
                     <p>Public Communications Office, NASA Headquarters</p>
